Add support for comparing separate sensing regimes on android and iOS
Since we want to compare HAHFDC versus HAMFDC on android and HAHFDC versus
MAHFDC on iOS

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_map_for_evaluation_trip(trip):\n",
+    "def get_map_for_travel_leg(trip):\n",
     "    curr_map = folium.Map()\n",
     "    get_marker(trip[\"start_loc\"], \"green\").add_to(curr_map)\n",
     "    get_marker(trip[\"end_loc\"], \"red\").add_to(curr_map)\n",
@@ -200,16 +200,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_map_for_shim_leg(trip):\n",
+    "    curr_map = folium.Map()\n",
+    "    mkr = get_marker(trip[\"loc\"], \"purple\")\n",
+    "    mkr.add_to(curr_map)\n",
+    "    curr_map.fit_bounds(mkr.get_bounds())\n",
+    "    return curr_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "evaluation_trips = spec_to_validate[\"evaluation_trips\"]\n",
     "map_list = []\n",
     "for t in evaluation_trips:\n",
-    "    if \"legs\" in t:\n",
-    "        for l in t[\"legs\"]:\n",
-    "            curr_map = get_map_for_evaluation_trip(l)\n",
+    "    for l in t[\"legs\"]:\n",
+    "        if l[\"type\"] == \"TRAVEL\":\n",
+    "            curr_map = get_map_for_travel_leg(l)\n",
     "            map_list.append(curr_map)\n",
-    "    else:\n",
-    "        curr_map = get_map_for_evaluation_trip(t)\n",
-    "        map_list.append(curr_map)\n",
+    "        else:\n",
+    "            curr_map = get_map_for_shim_leg(l)\n",
+    "            map_list.append(curr_map)\n",
     "\n",
     "rows = get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure()\n",
@@ -232,10 +246,11 @@
    "outputs": [],
    "source": [
     "for ss in spec_to_validate[\"sensing_settings\"]:\n",
-    "    compare_list = ss[\"compare\"]\n",
-    "    for i, ssc in enumerate(ss[\"sensing_configs\"]):\n",
-    "        if ssc[\"id\"] != compare_list[i]:\n",
-    "            print(\"Mismatch in sensing configurations for %s\" % ss)"
+    "    for phoneOS, compare_map in ss.items():\n",
+    "        compare_list = compare_map[\"compare\"]\n",
+    "        for i, ssc in enumerate(compare_map[\"sensing_configs\"]):\n",
+    "            if ssc[\"id\"] != compare_list[i]:\n",
+    "                print(\"Mismatch in sensing configurations for %s\" % ss)"
    ]
   },
   {
