Fix issues found while adding multi-modal shim sections
While creating our first multi-modal trip, found and fixed some minor issues
related to the added shim trips. Notable changes:
- we need to potentially add multiple shim trips while transitioning from a
  vehicle to a multi-occupancy vehicle (e.g. bus or train). In that case, there
  is a walking segment from the first vehicle to the second and a stopped
  segment when we are waiting to board the second.
- we cannot append the shim legs, we need to insert them into the appropriate
  place. Since we can return two shims, this gets more complicated
- changed the leg population to a functional paradigm to make this easier; the
  validation code now returns the filled section and we assemble a new section
  list that we assign to the original trip.

Also, since we now have so many sections, specify a ratio while creating the
branca figure so that the maps don't become too tiny.

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -70,7 +70,7 @@
     "        assert len(loc[\"geometry\"][\"coordinates\"]) == 1,\\\n",
     "            \"Only simple polygons supported!\"\n",
     "        curr_latlng = [lonlat_swap(c) for c in loc[\"geometry\"][\"coordinates\"][0]]\n",
-    "        print(\"Returning polygon for %s\" % curr_latlng)\n",
+    "        # print(\"Returning polygon for %s\" % curr_latlng)\n",
     "        return folium.PolyLine(curr_latlng, color=disp_color, fill=disp_color,\n",
     "                  popup=\"%s\" % loc[\"properties\"][\"name\"])        "
    ]
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec_to_validate = json.load(open(\"unimodal_roundtrip.filled.json\"))\n",
+    "spec_to_validate = json.load(open(\"car_scooter_brex_san_jose.filled.json\"))\n",
     "sensing_configs = json.load(open(\"sensing_regimes.all.specs.json\"))"
    ]
   },
@@ -226,7 +226,7 @@
     "            map_list.append(curr_map)\n",
     "\n",
     "rows = get_row_count(len(map_list), 2)\n",
-    "evaluation_maps = bre.Figure()\n",
+    "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/2) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
     "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)\n",
     "evaluation_maps"
