Create our first multi-modal trip for the final
Use the changes in 01834ad2955c4c875aae3a1eecbffaf30d748fca to create a
multi-modal trip to San Jose

+ change the ground truth notebook to the new spec

--- a/spec_creation/create_ground_truth_for_legs.ipynb
+++ b/spec_creation/create_ground_truth_for_legs.ipynb
@@ -105,11 +105,12 @@
     "        return folium.Marker(curr_latlng, icon=folium.Icon(color=disp_color),\n",
     "                  popup=\"%s\" % loc[\"properties\"][\"name\"])\n",
     "    elif loc[\"geometry\"][\"type\"] == \"Polygon\":\n",
+    "        print(\"Checking %s\" % loc[\"geometry\"][\"coordinates\"])\n",
     "        assert len(loc[\"geometry\"][\"coordinates\"]) == 1,\\\n",
     "            \"Only simple polygons supported!\"\n",
     "        curr_latlng = [lonlat_swap(c) for c in loc[\"geometry\"][\"coordinates\"][0]]\n",
     "        print(\"Returning polygon for %s\" % curr_latlng)\n",
-    "        return folium.PolyLine(curr_latlng, color=disp_color, fill=disp_color,\n",
+    "        return folium.Polygon(curr_latlng, color=disp_color, fill=disp_color,\n",
     "                  popup=\"%s\" % loc[\"properties\"][\"name\"])        "
    ]
   },
@@ -222,106 +223,50 @@
    "outputs": [],
    "source": [
     "curr_leg_spec = \\\n",
-    "        {\n",
-    "            \"id\": \"suburb_bicycling\",\n",
-    "            \"name\": \"Los Altos Library to Mountain View Library\",\n",
-    "            \"mode\": \"BICYCLING\",\n",
-    "            \"start_loc\":     {\n",
-    "      \"type\": \"Feature\",\n",
-    "      \"properties\": {\n",
-    "          \"name\": \"Los Altos Library\"\n",
-    "      },\n",
-    "      \"geometry\": {\n",
-    "        \"type\": \"Polygon\",\n",
-    "        \"coordinates\": [\n",
-    "          [\n",
-    "            [\n",
-    "              -122.11386322975159,\n",
-    "              37.38049489802194\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.11191058158873,\n",
-    "              37.37965088242338\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.11124002933502,\n",
-    "              37.37964235696482\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.11118102073668,\n",
-    "              37.37997911184045\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.11119711399078,\n",
-    "              37.38072934511354\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.11176574230194,\n",
-    "              37.3807208197776\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.11254358291625,\n",
-    "              37.38109167099526\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.11386322975159,\n",
-    "              37.38109593364228\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.11386322975159,\n",
-    "              37.38049489802194\n",
-    "            ]\n",
-    "          ]\n",
-    "        ]\n",
-    "      }\n",
-    "    },\n",
-    "            \"end_loc\":     {\n",
-    "      \"type\": \"Feature\",\n",
-    "      \"properties\": {\n",
-    "        \"name\": \"Mountain View Library\"\n",
-    "      },\n",
-    "      \"geometry\": {\n",
-    "        \"type\": \"Polygon\",\n",
-    "        \"coordinates\": [\n",
-    "          [\n",
-    "            [\n",
-    "              -122.08355963230133,\n",
-    "              37.39091642895306\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.08428382873535,\n",
-    "              37.38975713188671\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.08383858203888,\n",
-    "              37.389573859018185\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.08340406417847,\n",
-    "              37.390196132517175\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.08311975002289,\n",
-    "              37.39012793841312\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.08280861377716,\n",
-    "              37.390656441096894\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.08355426788331,\n",
-    "              37.39096757399895\n",
-    "            ],\n",
-    "            [\n",
-    "              -122.08355963230133,\n",
-    "              37.39091642895306\n",
-    "            ]\n",
-    "          ]\n",
-    "        ]\n",
-    "      }\n",
-    "    },\n",
-    "    \n",
-    "            \"polyline\": \"ayecF~nchVrAp@\\\\RhB~@}AhEEJ{@~BY^UXSZbB`BpBlArAp@dB|@fAXPF^LRH^Dl@@r@EZ?HH@f@Qh@Ql@TJHPP`@DVBHEXQ@EABh@v@P`@H@@d@`@f@FxAAElZJ^FT?rEYAoAB@X^v@RRTTfChCxD~CxAxA~DhDbAbABBb@`@|BzBFFMRLR?lEFH@nCBnEA|DA~BCxAA~@AxFBVLZCvLAhEGRHJ?t@?dCf@?AnCD@TTNB^ALCHCFT?rC\"\n",
+    "{\n",
+    "            \"id\": \"freeway_driving_weekday\",\n",
+    "            \"name\": \"Mountain View Library to San Jose King Library\",\n",
+    "            \"mode\": \"CAR\",\n",
+    "            \"start_loc\": {\n",
+    "              \"type\": \"Feature\",\n",
+    "              \"properties\": {\n",
+    "                \"name\": \"Mountain View Library\"\n",
+    "              },\n",
+    "              \"geometry\": {\n",
+    "                \"type\": \"Polygon\",\n",
+    "                \"coordinates\": [\n",
+    "                  [\n",
+    "                    [ -122.08355963230133, 37.39091642895306 ],\n",
+    "                    [ -122.08428382873535, 37.38975713188671 ],\n",
+    "                    [ -122.08383858203888, 37.389573859018185 ],\n",
+    "                    [ -122.08340406417847, 37.390196132517175 ],\n",
+    "                    [ -122.08311975002289, 37.39012793841312 ],\n",
+    "                    [ -122.08280861377716, 37.390656441096894 ],\n",
+    "                    [ -122.08355426788331, 37.39096757399895 ],\n",
+    "                    [ -122.08355963230133, 37.39091642895306 ]\n",
+    "                  ]\n",
+    "                ]\n",
+    "              }\n",
+    "            },\n",
+    "            \"end_loc\": {\n",
+    "              \"type\": \"Feature\",\n",
+    "              \"properties\": {\n",
+    "                \"name\": \"San Jose King Library\"\n",
+    "              },\n",
+    "              \"geometry\": {\n",
+    "                \"type\": \"Polygon\",\n",
+    "                \"coordinates\": [\n",
+    "                  [\n",
+    "                    [ -121.88688397407532, 37.33674277401349 ],\n",
+    "                    [ -121.8852210044861, 37.33460162979272 ],\n",
+    "                    [ -121.88409447669984, 37.33517744150916 ],\n",
+    "                    [ -121.88620805740356, 37.33704560024162 ],\n",
+    "                    [ -121.88688397407532, 37.33674277401349 ]\n",
+    "                  ]\n",
+    "                ]\n",
+    "              }\n",
+    "            },\n",
+    "            \"polyline\": \"ayecF~nchVeB}@aFkCMGSKOIgCsAyAu@f@gBn@{BqCyA{Aw@MIDKd@aBTu@Lc@FSQKEA]Se@WgAi@GKCCEGGGGGKGy@g@IGIEYQCCSMYSy@c@wBkAQ@a@SKGs@_@u@c@A?UMc@[}@u@MKo@s@MQSYu@kA]g@[a@i@{@CEU]KMIOc@m@cAyACU_@k@]i@OYcBeCS[_@i@i@y@q@aAS[cA}AeEoFKMa@i@iBkBu@w@i@i@k@m@i@c@KG_@Wm@[o@W_Aa@_A]KC@Q@E?UAUCWG[GYK[GUKUKUMUMSMSk@w@IQIQCSESAU?S?UBUDcCvDaY~BgQ\\\\gC`@iCd@iCrB}Kl@oD^aC\\\\eCZ}BtBoOrJmt@p@}Ev@aG~CuUhEa\\\\\\\\mC`BcMhIan@|D}YJu@fDeWfAaHzCyPxFoZhBoJ~AyHzCaO`@mB~@yEjAmGn@gDdAqFxA_ItEiW|Iie@vCsOhC_NfDaQj@}CP_AnFkYtF{YrCkOjB}JfA{GrBqOpBkPhB{OzCiXFk@bBuNjCaUf@eEX_CZyBj@uDDYh@aBl@_EVkA~@oEh@eBZo@Xi@`AmAj@k@j@_@VMTI^M\\\\KzCu@pAa@r@S~@c@\\\\Op@c@d@_@XYf@i@b@g@j@{@NYf@{@jAyBnAaCrFoKr@oAt@mA|@qA`AmAfAoAdAcAtAiAxAgAlA{@vUyOlMyIvEaDnGkE|BwA~CkBzBgAxCsAjIsDl@Yl@[t@g@r@e@hB}AnB_Cd@u@`@s@d@{@b@_A`@eA`AcCdA_Cv@wAv@kAr@}@p@w@r@s@r@o@f@_@d@[`@Wh@[z@a@fBs@bC_A`Bu@`Ae@`@WdGqD^E|CmBj@YdD{AVKZI^Ef@A`@Dr@NRBf@FVBT?^EXGf@STKTI\\\\QTKdAu@bBoAPUHe@@w@Gy@Co@@]DYfA{@JInBqA^SRMNMDGL[N_@Zu@Te@HKh@m@rCgBt@e@PKSk@EMACsAsDqAmDEMEIcAkCIUKYiA}CCGi@{AEMGOUo@Yu@e@mAAGEIGQe@mAk@}AIUKUmAaDIUMYQe@Qe@\"\n",
     "        }"
    ]
   },
@@ -350,6 +295,13 @@
    "outputs": [],
    "source": [
     "get_map_for_evaluation_trip(curr_leg_spec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sat down in San Jose: 12:28pm"
    ]
   },
   {
