Fix the ground truth creation to handle the geojson view
+ functional return of the filled trip leg to handle shift to functional programming

--- a/spec_creation/create_ground_truth_for_legs.ipynb
+++ b/spec_creation/create_ground_truth_for_legs.ipynb
@@ -126,7 +126,7 @@
     "    get_marker(trip[\"end_loc\"], \"red\").add_to(curr_map)\n",
     "    # trips from relations won't have waypoints\n",
     "    if \"waypoint_coords\" in trip:\n",
-    "        for i, wpc in enumerate(trip[\"waypoint_coords\"]):\n",
+    "        for i, wpc in enumerate(trip[\"waypoint_coords\"][\"geometry\"][\"coordinates\"]):\n",
     "            folium.map.Marker(\n",
     "                lonlat_swap(wpc), popup=\"%d\" % i,\n",
     "                icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
@@ -213,6 +213,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "curr_leg_spec = \\\n",
+    "{\n",
+    "                    \"id\": \"inner_suburb_downtown_walk\",\n",
+    "                    \"name\": \"Caltrain from SF to Mountain View\",\n",
+    "                    \"mode\": \"WALKING\",\n",
+    "                    \"start_loc\": {\n",
+    "                      \"type\": \"Feature\",\n",
+    "                      \"properties\": {\n",
+    "                        \"name\": \"Mountain View Transit Center\"\n",
+    "                      },\n",
+    "                      \"geometry\": {\n",
+    "                        \"type\": \"Polygon\",\n",
+    "                        \"coordinates\": [\n",
+    "                          [\n",
+    "                            [ -122.07675218582153, 37.39485875725021 ],\n",
+    "                            [ -122.0769828557968, 37.39444961714526 ],\n",
+    "                            [ -122.07471370697021, 37.3936355921696 ],\n",
+    "                            [ -122.074493765831, 37.39398080802943 ],\n",
+    "                            [ -122.07675218582153, 37.39485875725021 ]\n",
+    "                          ]\n",
+    "                        ]\n",
+    "                      }\n",
+    "                    },\n",
+    "                    \"end_loc\": {\n",
+    "                      \"type\": \"Feature\",\n",
+    "                      \"properties\": {\n",
+    "                        \"name\": \"Mountain View Library\"\n",
+    "                      },\n",
+    "                      \"geometry\": {\n",
+    "                        \"type\": \"Polygon\",\n",
+    "                        \"coordinates\": [\n",
+    "                          [\n",
+    "                            [ -122.08355963230133, 37.39091642895306 ],\n",
+    "                            [ -122.08428382873535, 37.38975713188671 ],\n",
+    "                            [ -122.08383858203888, 37.389573859018185 ],\n",
+    "                            [ -122.08340406417847, 37.390196132517175 ],\n",
+    "                            [ -122.08311975002289, 37.39012793841312 ],\n",
+    "                            [ -122.08280861377716, 37.390656441096894 ],\n",
+    "                            [ -122.08355426788331, 37.39096757399895 ],\n",
+    "                            [ -122.08355963230133, 37.39091642895306 ]\n",
+    "                          ]\n",
+    "                        ]\n",
+    "                      }\n",
+    "                    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "importlib.reload(aes)"
    ]
   },
@@ -222,61 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curr_leg_spec = \\\n",
-    "{\n",
-    "            \"id\": \"freeway_driving_weekday\",\n",
-    "            \"name\": \"Mountain View Library to San Jose King Library\",\n",
-    "            \"mode\": \"CAR\",\n",
-    "            \"start_loc\": {\n",
-    "              \"type\": \"Feature\",\n",
-    "              \"properties\": {\n",
-    "                \"name\": \"Mountain View Library\"\n",
-    "              },\n",
-    "              \"geometry\": {\n",
-    "                \"type\": \"Polygon\",\n",
-    "                \"coordinates\": [\n",
-    "                  [\n",
-    "                    [ -122.08355963230133, 37.39091642895306 ],\n",
-    "                    [ -122.08428382873535, 37.38975713188671 ],\n",
-    "                    [ -122.08383858203888, 37.389573859018185 ],\n",
-    "                    [ -122.08340406417847, 37.390196132517175 ],\n",
-    "                    [ -122.08311975002289, 37.39012793841312 ],\n",
-    "                    [ -122.08280861377716, 37.390656441096894 ],\n",
-    "                    [ -122.08355426788331, 37.39096757399895 ],\n",
-    "                    [ -122.08355963230133, 37.39091642895306 ]\n",
-    "                  ]\n",
-    "                ]\n",
-    "              }\n",
-    "            },\n",
-    "            \"end_loc\": {\n",
-    "              \"type\": \"Feature\",\n",
-    "              \"properties\": {\n",
-    "                \"name\": \"San Jose King Library\"\n",
-    "              },\n",
-    "              \"geometry\": {\n",
-    "                \"type\": \"Polygon\",\n",
-    "                \"coordinates\": [\n",
-    "                  [\n",
-    "                    [ -121.88688397407532, 37.33674277401349 ],\n",
-    "                    [ -121.8852210044861, 37.33460162979272 ],\n",
-    "                    [ -121.88409447669984, 37.33517744150916 ],\n",
-    "                    [ -121.88620805740356, 37.33704560024162 ],\n",
-    "                    [ -121.88688397407532, 37.33674277401349 ]\n",
-    "                  ]\n",
-    "                ]\n",
-    "              }\n",
-    "            },\n",
-    "            \"polyline\": \"ayecF~nchVeB}@aFkCMGSKOIgCsAyAu@f@gBn@{BqCyA{Aw@MIDKd@aBTu@Lc@FSQKEA]Se@WgAi@GKCCEGGGGGKGy@g@IGIEYQCCSMYSy@c@wBkAQ@a@SKGs@_@u@c@A?UMc@[}@u@MKo@s@MQSYu@kA]g@[a@i@{@CEU]KMIOc@m@cAyACU_@k@]i@OYcBeCS[_@i@i@y@q@aAS[cA}AeEoFKMa@i@iBkBu@w@i@i@k@m@i@c@KG_@Wm@[o@W_Aa@_A]KC@Q@E?UAUCWG[GYK[GUKUKUMUMSMSk@w@IQIQCSESAU?S?UBUDcCvDaY~BgQ\\\\gC`@iCd@iCrB}Kl@oD^aC\\\\eCZ}BtBoOrJmt@p@}Ev@aG~CuUhEa\\\\\\\\mC`BcMhIan@|D}YJu@fDeWfAaHzCyPxFoZhBoJ~AyHzCaO`@mB~@yEjAmGn@gDdAqFxA_ItEiW|Iie@vCsOhC_NfDaQj@}CP_AnFkYtF{YrCkOjB}JfA{GrBqOpBkPhB{OzCiXFk@bBuNjCaUf@eEX_CZyBj@uDDYh@aBl@_EVkA~@oEh@eBZo@Xi@`AmAj@k@j@_@VMTI^M\\\\KzCu@pAa@r@S~@c@\\\\Op@c@d@_@XYf@i@b@g@j@{@NYf@{@jAyBnAaCrFoKr@oAt@mA|@qA`AmAfAoAdAcAtAiAxAgAlA{@vUyOlMyIvEaDnGkE|BwA~CkBzBgAxCsAjIsDl@Yl@[t@g@r@e@hB}AnB_Cd@u@`@s@d@{@b@_A`@eA`AcCdA_Cv@wAv@kAr@}@p@w@r@s@r@o@f@_@d@[`@Wh@[z@a@fBs@bC_A`Bu@`Ae@`@WdGqD^E|CmBj@YdD{AVKZI^Ef@A`@Dr@NRBf@FVBT?^EXGf@STKTI\\\\QTKdAu@bBoAPUHe@@w@Gy@Co@@]DYfA{@JInBqA^SRMNMDGL[N_@Zu@Te@HKh@m@rCgBt@e@PKSk@EMACsAsDqAmDEMEIcAkCIUKYiA}CCGi@{AEMGOUo@Yu@e@mAAGEIGQe@mAk@}AIUKUmAaDIUMYQe@Qe@\"\n",
-    "        }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aes.validate_and_fill_leg(curr_leg_spec)"
+    "curr_leg_spec = aes.validate_and_fill_leg(curr_leg_spec)"
    ]
   },
   {
@@ -291,7 +290,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "get_map_for_evaluation_trip(curr_leg_spec)"
@@ -301,8 +302,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sat down in San Jose: 12:28pm"
+    "Sat down in San Jose: 12:28pm\n",
+    "Got up from San Jose: 3:47pm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
