Fix geojson for waypoints as well

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec_to_validate = json.load(open(\"car_scooter_brex_san_jose.filled.json\"))\n",
+    "spec_to_validate = json.load(open(\"train_bus_ebike_mtv_ucb.filled.json\"))\n",
     "sensing_configs = json.load(open(\"sensing_regimes.all.specs.json\"))"
    ]
   },
@@ -180,11 +180,11 @@
     "    get_marker(trip[\"end_loc\"], \"red\").add_to(curr_map)\n",
     "    # trips from relations won't have waypoints\n",
     "    if \"waypoint_coords\" in trip:\n",
-    "        for i, wpc in enumerate(trip[\"waypoint_coords\"]):\n",
+    "        for i, wpc in enumerate(trip[\"waypoint_coords\"][\"geometry\"][\"coordinates\"]):\n",
     "            folium.map.Marker(\n",
     "                lonlat_swap(wpc), popup=\"%d\" % i,\n",
     "                icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
-    "    print(\"Found %d coordinates for the route\" % (len(trip[\"route_coords\"])))\n",
+    "    print(\"Found %d coordinates for the route\" % (len(trip[\"route_coords\"][\"geometry\"][\"coordinates\"])))\n",
     "    latlng_route_coords = [lonlat_swap(rc) for rc in trip[\"route_coords\"][\"geometry\"][\"coordinates\"]]\n",
     "    folium.PolyLine(latlng_route_coords,\n",
     "                    popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
@@ -211,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "evaluation_trips = spec_to_validate[\"evaluation_trips\"]\n",
