Check in the fixed San Jose and Los Altos visualizations
Now with proper android stuff

--- a/example_visualization_san_jose_round_trip.ipynb
+++ b/example_visualization_san_jose_round_trip.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook demonstrates the result of the first round of data collection, for the Mountain View library <-> Los Altos library round trip."
+    "This notebook demonstrates the result of the first round of data collection, for the Mountain View library <-> San Jose library round trip."
    ]
   },
   {
@@ -87,7 +87,7 @@
    "source": [
     "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sdunp = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"unimodal_trip_car_bike_mtv_la\")"
+    "sdunp = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"car_scooter_brex_san_jose\")"
    ]
   },
   {
