--- a/example_visualization_los_altos_library_round_trip_maybe_pilot.ipynb
+++ b/example_visualization_los_altos_library_round_trip_maybe_pilot.ipynb
@@ -186,7 +186,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
@@ -195,6 +197,32 @@
     "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=1)\n",
     "ezpv.plot_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\")\n",
     "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def get_ground_truth_trajectory_for_leg(leg_id):\n",
+    "        for t in sdunp.curr_spec_entry[\"data\"][\"label\"][\"evaluation_trips\"]:\n",
+    "            print(\"Considering trip %s\" % t[\"id\"])\n",
+    "            ll = [l for l in t[\"legs\"] if l[\"id\"] == leg_id]\n",
+    "            if len(ll) > 0:\n",
+    "                assert len(ll) == 1\n",
+    "                return ll[0]\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Spec with list of legs is defined at https://github.com/e-mission/e-mission-eval-public-data/tree/master/spec_creation/final_sfbayarea\n",
+    "get_ground_truth_trajectory_for_leg(\"suburb_bicycling\")"
    ]
   },
   {
