Initial attempts at making the notebooks consistent with the modules
Currently abandoned.
Eventually we should try to integrate with those notebook compatible python
file readers like sphinx

--- a/calibration_templates/Validate_calibration_in_motion.ipynb
+++ b/calibration_templates/Validate_calibration_in_motion.ipynb
@@ -35,8 +35,8 @@
    "outputs": [],
    "source": [
     "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
-    "AUTHOR_EMAIL = \"CHANGEME\" # e.g. shankari@eecs.berkeley.edu\n",
-    "CURR_SPEC_ID = \"CHANGEME\" # e.g. sfba_calibration_only_1\n",
+    "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\" # e.g. shankari@eecs.berkeley.edu\n",
+    "CURR_SPEC_ID = \"sfba_moving_calibration_only_1\" # e.g. sfba_calibration_only_1\n",
     "MAX_DURATION_VARIATION = 5 * 60 # seconds"
    ]
   },
@@ -267,7 +267,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ios_1_transitions = eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_transitions\"]\n",
+    "first_two_entries_list = []\n",
+    "for phoneOS, phone_map in eval_transitions.items():\n",
+    "    print(\"Processing data for %s phones\" % phoneOS)\n",
+    "    for phone_label in phone_map:\n",
+    "        print(\"Processing transitions for phone %s\" % phone_label)\n",
+    "        first_two_entries_list.extend(sorted(phone_map[phone_label][\"transitions\"], key=lambda t:t[\"data\"][\"ts\"])[1:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\".join([str((t[\"_id\"], t[\"data\"][\"transition\"], t[\"data\"][\"trip_id\"], arrow.get(t[\"data\"][\"ts\"]).to(eval_tz).format())) for t in first_two_entries_list]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = pd.DataFrame({})\n",
+    "test_df[\"hr\"] = []\n",
+    "test_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\".join([str((t[\"_id\"], t[\"data\"][\"transition\"], t[\"data\"][\"trip_id\"], arrow.get(t[\"data\"][\"ts\"]).to(eval_tz).format())) for t in first_two_entries_list]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(first_two_entries_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\",\".join([str('boi.ObjectId(\"%s\")' % t[\"_id\"][\"$oid\"]) for t in first_two_entries_list]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ios_1_transitions = eval_transitions[\"ios\"][\"ucb-sdb-ios-2\"][\"calibration_transitions\"]\n",
     "print(\"\\n\".join([str((t[\"transition\"], t[\"trip_id\"], t[\"ts\"], arrow.get(t[\"ts\"]).to(eval_tz))) for t in ios_1_transitions]))"
    ]
   },
@@ -277,7 +338,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ios_1_transitions = eval_transitions[\"android\"][\"ucb-sdb-android-2\"][\"calibration_transitions\"]\n",
+    "arrow.get(\"2019-07-12T10:17:22.232000-07:00\").timestamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ios_1_transitions = eval_transitions[\"android\"][\"ucb-sdb-android-1\"][\"calibration_transitions\"]\n",
     "print(\"\\n\".join([str((t[\"transition\"], t[\"trip_id\"], t[\"ts\"], arrow.get(t[\"ts\"]).to(eval_tz))) for t in ios_1_transitions]))"
    ]
   },
@@ -291,6 +361,9 @@
     "def transitions_to_ranges(transition_list, start_tt, end_tt, start_ti, end_ti):\n",
     "    start_transitions = transition_list[::2]\n",
     "    end_transitions = transition_list[1::2]\n",
+    "    print(\"\\n\".join([str((t[\"transition\"], t[\"trip_id\"], t[\"ts\"], arrow.get(t[\"ts\"]).to(eval_tz))) for t in start_transitions]))\n",
+    "    print(\"\\n\".join([str((t[\"transition\"], t[\"trip_id\"], t[\"ts\"], arrow.get(t[\"ts\"]).to(eval_tz))) for t in end_transitions]))\n",
+    "    \n",
     "    if len(transition_list) % 2 == 0:\n",
     "        print(\"All calibration is complete, nothing to change\")\n",
     "    else:\n",
@@ -308,6 +381,11 @@
     "        fake_end_transition[\"metadata\"][\"platform\"] = \"fake\"\n",
     "        if \"local_dt\" in fake_end_transition[\"data\"]:\n",
     "            del fake_end_transition[\"data\"][\"local_dt\"]\n",
+    "        transition_list.append(fake_end_transition)\n",
+    "        end_transitions.append(fake_end_transition[\"data\"])\n",
+    "            \n",
+    "    print(\"\\n\".join([str((t[\"transition\"], t[\"trip_id\"], t[\"ts\"], arrow.get(t[\"ts\"]).to(eval_tz))) for t in start_transitions]))\n",
+    "    print(\"\\n\".join([str((t[\"transition\"], t[\"trip_id\"], t[\"ts\"], arrow.get(t[\"ts\"]).to(eval_tz))) for t in end_transitions]))\n",
     "\n",
     "    range_list = []\n",
     "    for (s, e) in zip(start_transitions, end_transitions):\n",
@@ -330,7 +408,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transitions_to_ranges(eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_transitions\"], \"START_CALIBRATION_PERIOD\", \"STOP_CALIBRATION_PERIOD\", 0, 1)"
+    "transitions_to_ranges(eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_transitions\"], \"START_CALIBRATION_PERIOD\", \"STOP_CALIBRATION_PERIOD\", 0, 1)\n",
+    "# transitions_to_ranges(eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_transitions\"], \"START_CALIBRATION_PERIOD\", \"STOP_CALIBRATION_PERIOD\", 0, 1, phone_map[phone_label][\"transitions\"][-1], eval_end_ts)"
    ]
   },
   {
@@ -642,12 +721,14 @@
    "source": [
     "def plot_separate_calibration_curves(fig, nRows, phone_map):\n",
     "    for i, phone_label in enumerate(phone_map.keys()):\n",
-    "        ax = fig.add_subplot(nRows, 2, i+1, title=phone_label)\n",
+    "        ax = fig.add_subplot(nRows, 4, i+1, title=phone_label)\n",
     "        curr_calibration_ranges = phone_map[phone_label][\"calibration_ranges\"]\n",
     "        for r in curr_calibration_ranges:\n",
     "            battery_df = r[\"battery_df\"]\n",
     "            # print(battery_df.battery_level_pct.tolist())\n",
-    "            battery_df.plot(x=\"hr\", y=\"battery_level_pct\", ax=ax, label=r[\"trip_id\"], ylim=(0,100), sharey=True)"
+    "            battery_df.plot(x=\"hr\", y=\"battery_level_pct\", ax=ax, label=r[\"trip_id\"], ylim=(0,100), sharey=True, legend=False)\n",
+    "    handles, labels = ax.get_legend_handles_labels()\n",
+    "    fig.legend(handles, labels, loc='upper center')"
    ]
   },
   {
@@ -656,8 +737,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(ifig, ax) = plt.subplots(figsize=(16,16))\n",
-    "nRows = get_row_count(len(eval_transitions[\"ios\"].keys()), 2)\n",
+    "(ifig, ax) = plt.subplots(figsize=(16,4), nrows=0, ncols=0)\n",
+    "nRows = get_row_count(len(eval_transitions[\"ios\"].keys()), 4)\n",
     "print(nRows)\n",
     "plot_separate_calibration_curves(ifig, nRows, eval_transitions[\"ios\"])"
    ]
@@ -1089,6 +1170,7 @@
     "            curr_map = folium.Map()\n",
     "            all_points = []\n",
     "            for i, (phone_label, phone_data_map) in enumerate(curr_calibrate_trip_map.items()):\n",
+    "                print(\"%d, %s, %s\" % (i, phone_label, phone_data_map.keys()))\n",
     "                location_df = phone_data_map[\"location_df\"]\n",
     "                latlng_route_coords = list(zip(location_df.latitude, location_df.longitude))\n",
     "                all_points.extend(latlng_route_coords)\n",
