--- a/evaluation_templates/Validate_evaluation.ipynb
+++ b/evaluation_templates/Validate_evaluation.ipynb
@@ -35,8 +35,8 @@
    "outputs": [],
    "source": [
     "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
-    "AUTHOR_EMAIL = \"CHANGEME\" # e.g. shankari@eecs.berkeley.edu\n",
-    "CURR_SPEC_ID = \"CHANGEME\" # e.g. sfba_calibration_only_1\n",
+    "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\" # e.g. shankari@eecs.berkeley.edu\n",
+    "CURR_SPEC_ID = \"many_unimodal_trips_sb\" # e.g. sfba_calibration_only_1\n",
     "MAX_DURATION_VARIATION = 5 * 60 # seconds"
    ]
   },
@@ -250,6 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # imported to emeval/input/phone_view.py\n",
     "for phoneOS, phone_map in eval_transitions.items():\n",
     "    print(\"Processing data for %s phones\" % phoneOS)\n",
     "    for phone_label in phone_map:\n",
@@ -364,9 +365,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expected_config_map = {}\n",
+    "expected_config_map = {\n",
+    "    \"fixed:ACCURACY_CONTROL\": {\n",
+    "        \"is_duty_cycling\": False,\n",
+    "        \"accuracy\": [\"PRIORITY_HIGH_ACCURACY\",\"kCLLocationAccuracyBest\"],\n",
+    "        \"filter\": 1,\n",
+    "    },\n",
+    "    \"fixed:POWER_CONTROL\": {\n",
+    "        \"is_duty_cycling\": False,\n",
+    "        \"accuracy\": [\"PRIORITY_NO_POWER\",\"kCLLocationAccuracyThreeKilometers\"],\n",
+    "        \"filter\": 1200,\n",
+    "    }\n",
+    "}\n",
     "for ct in curr_spec[\"sensing_settings\"]:\n",
-    "    expected_config_map[ct[\"id\"]] = ct[\"config\"][\"sensing_config\"]"
+    "    for s in ct[\"sensing_configs\"]:\n",
+    "        expected_config_map[\"%s:%s\" % (ct[\"name\"], s[\"id\"])] = s[\"sensing_config\"]\n",
+    "# print(expected_config_map)"
    ]
   },
   {
@@ -432,25 +446,88 @@
     "    assert config_during_test[\"accuracy\"] == ev, \"Field accuracy mismatch! %s != %s\" % (config_during_test[accuracy], ev)\n",
     "\n",
     "for phoneOS, phone_map in eval_transitions.items():\n",
-    "    print(\"Processing data for %s phones\" % phoneOS)\n",
+    "    # print(\"Processing data for %s phones, next level keys = %s\" % (phoneOS, phone_map.keys()))\n",
     "    for phone_label in phone_map:\n",
     "        curr_evaluation_ranges = phone_map[phone_label][\"evaluation_ranges\"]\n",
-    "        all_test_ids = [r[\"trip_id\"] for r in curr_evaluation_ranges]\n",
-    "        unique_test_ids = sorted(list(set(all_test_ids)))\n",
-    "        spec_test_ids = sorted([ct[\"id\"] for ct in curr_spec[\"sensing_settings\"]])\n",
-    "        # assert unique_test_ids == spec_test_ids, \"Missing evaluation test while comparing %s, %s\" % (unique_test_ids, spec_test_ids)\n",
+    "        unique_test_ids = set(filter(lambda id: id != \"fixed\", [r[\"trip_id\"].split(\":\")[0] for r in curr_evaluation_ranges]))\n",
+    "        # This is a tricky check since, unlike in the calibration case, we will have different ids for the different evaluation\n",
+    "        # ranges. For now, let us just assert that the evaluation range is valid\n",
+    "        # print(\"Unique test ids = %s\" % unique_test_ids)\n",
+    "        spec_test_ids = set([ct[\"name\"] for ct in curr_spec[\"sensing_settings\"]])\n",
+    "        # print(spec_test_ids)\n",
+    "        # <= represents subset for set objects\n",
+    "        assert unique_test_ids <= spec_test_ids, \"Invalid evaluation test while comparing %s, %s\" % (unique_test_ids, spec_test_ids)\n",
     "        for r in curr_evaluation_ranges:\n",
     "            config_during_test_entries = retrieve_data_from_server(phone_label, [\"config/sensor_config\"], r[\"start_ts\"], r[\"end_ts\"])\n",
     "            print(\"%s -> %s\" % (r[\"trip_id\"], [c[\"data\"][\"accuracy\"] for c in config_during_test_entries]))\n",
     "            # assert len(config_during_test_entries) == 1, \"Out of band configuration? Found %d config changes\" % len(config_during_test_entries)\n",
     "            config_during_test = config_during_test_entries[0][\"data\"]\n",
-    "            # expected_config = expected_config_map[r[\"trip_id\"]]\n",
-    "            # print(config_during_test, expected_config)\n",
-    "            # validate_filter(phoneOS, config_during_test, expected_config)\n",
-    "            # validate_accuracy(phoneOS, config_during_test, expected_config)\n",
-    "            # for f in expected_config:\n",
-    "            #     if f != \"accuracy\" and f != \"filter\":\n",
-    "            #         assert config_during_test[f] == expected_config[f], \"Field %s mismatch! %s != %s\" % (f, config_during_test[f], expected_config[f])"
+    "            expected_config = expected_config_map[r[\"trip_id\"]]\n",
+    "            # print(config_during_test.keys(), expected_config.keys())\n",
+    "            validate_filter(phoneOS, config_during_test, expected_config)\n",
+    "            validate_accuracy(phoneOS, config_during_test, expected_config)\n",
+    "            for f in expected_config:\n",
+    "                if f != \"accuracy\" and f != \"filter\":\n",
+    "                    assert config_during_test[f] == expected_config[f], \"Field %s mismatch! %s != %s\" % (f, config_during_test[f], expected_config[f])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Link evaluation ranges to each other\n",
+    "\n",
+    "Since the evaluation ranges have separate IDs, it is hard to link them the way we link the calibration ranges.\n",
+    "So let's add a common field (`eval_common_trip_id`) to each of the matching ranges for easy checking\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def link_common_eval_ranges():\n",
+    "    for phoneOS, phone_map in eval_transitions.items(): # android, ios\n",
+    "        print(\"Processing data for %s phones\" % phoneOS)\n",
+    "        all_eval_ranges = [m[\"evaluation_ranges\"] for m in phone_map.values()]\n",
+    "        # all the lengths are equal - i.e. the set of lengths has one entr\n",
+    "        assert len(set([len(a) for a in all_eval_ranges])) == 1\n",
+    "        for ctuple in zip(*all_eval_ranges):\n",
+    "            eval_cols = ctuple[1:-1]\n",
+    "            # print([ct[\"trip_id\"] for ct in ctuple], [ct[\"trip_id\"] for ct in eval_cols])\n",
+    "            get_common_name = lambda r: r[\"trip_id\"].split(\":\")[0]\n",
+    "            get_separate_role = lambda r: r[\"trip_id\"].split(\":\")[1]\n",
+    "            common_names = set([get_common_name(r) for r in eval_cols])\n",
+    "            separate_roles = [get_separate_role(r) for r in eval_cols]\n",
+    "            # print(separate_roles)\n",
+    "            assert len(common_names) == 1\n",
+    "            common_name = list(common_names)[0]\n",
+    "            # print(common_name)\n",
+    "            for r in ctuple:\n",
+    "                r[\"eval_common_trip_id\"] = common_name\n",
+    "            ctuple[0][\"eval_role\"] = \"accuracy_control\"\n",
+    "            for r, sr in zip(eval_cols, separate_roles):\n",
+    "                r[\"eval_role\"] = sr\n",
+    "            ctuple[-1][\"eval_role\"] = \"power_control\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "link_common_eval_ranges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_transitions[\"android\"][\"ucb-sdb-android-1\"][\"evaluation_ranges\"][0]"
    ]
   },
   {
@@ -583,7 +660,7 @@
     "                len(re[\"evaluation_trip_ranges\"]) if \"evaluation_trip_ranges\" in re else 0))\n",
     "            re[\"evaluation_trip_ranges\"] = copy.deepcopy(accuracy_eval_trips_ranges)\n",
     "            # print(curr_eval_trips_ranges)\n",
-    "            # print(\"\\n\".join([str((tr[\"trip_id\"], tr[\"duration\"], arrow.get(tr[\"start_ts\"]).to(eval_tz), arrow.get(tr[\"end_ts\"]).to(eval_tz))) for tr in curr_eval_trips_ranges]))"
+    "            print(\"\\n\".join([str((tr[\"trip_id\"], tr[\"duration\"], arrow.get(tr[\"start_ts\"]).to(eval_tz), arrow.get(tr[\"end_ts\"]).to(eval_tz))) for tr in curr_eval_trips_ranges]))"
    ]
   },
   {
@@ -1170,31 +1247,24 @@
    "source": [
     "def find_comparison_regimes():\n",
     "    comparison_map = {}\n",
-    "    for phoneOS, phone_map in eval_phone_maps.items(): # android, ios\n",
+    "    for phoneOS, phone_map in eval_transitions.items(): # android, ios\n",
     "        print(\"Processing data for %s phones\" % phoneOS)\n",
     "        comparison_map[phoneOS] = {}\n",
-    "        accuracy_control = accuracy_control_maps[phoneOS][\"evaluation_ranges\"]\n",
-    "        power_control = power_control_maps[phoneOS][\"evaluation_ranges\"]\n",
-    "        # print([m[\"evaluation_ranges\"] for m in phone_map.values()])\n",
-    "        all_eval_roles = [m[\"role\"] for m in phone_map.values()]\n",
-    "        print(all_eval_roles)\n",
-    "        all_eval_ranges = [accuracy_control] + [m[\"evaluation_ranges\"] for m in phone_map.values()] + [power_control]\n",
+    "        all_eval_ranges = [m[\"evaluation_ranges\"] for m in phone_map.values()]\n",
     "        # all the lengths are equal - i.e. the set of lengths has one entr\n",
     "        assert len(set([len(a) for a in all_eval_ranges])) == 1\n",
     "        for ctuple in zip(*all_eval_ranges):\n",
-    "            eval_cols = ctuple[1:-1]\n",
-    "            print([ct[\"trip_id\"] for ct in ctuple], [ct[\"trip_id\"] for ct in eval_cols])\n",
-    "            get_common_name = lambda r: r[\"trip_id\"].split(\":\")[0]\n",
-    "            get_separate_role = lambda r: r[\"trip_id\"].split(\":\")[1]\n",
-    "            common_names = set([get_common_name(r) for r in eval_cols])\n",
-    "            separate_roles = [get_separate_role(r) for r in eval_cols]\n",
-    "            print(separate_roles)\n",
+    "            common_names = set([r[\"eval_common_trip_id\"] for r in ctuple])\n",
     "            assert len(common_names) == 1\n",
     "            common_name = list(common_names)[0]\n",
-    "            print(common_name)\n",
+    "            # print(common_name)\n",
     "            comparison_map[phoneOS][common_name] = {}\n",
+    "            \n",
+    "            separate_roles = [r[\"eval_role\"] for r in ctuple]\n",
+    "            print(separate_roles)\n",
+    "\n",
     "            eval_trips_for_range = [r[\"evaluation_trip_ranges\"] for r in ctuple]\n",
-    "            print([len(et) for et in eval_trips_for_range])\n",
+    "            # print([len(et) for et in eval_trips_for_range])\n",
     "            assert len(set([len(et) for et in eval_trips_for_range])) == 1\n",
     "            for ctriptuple in zip(*(eval_trips_for_range)):\n",
     "                # print([ctt[\"trip_id\"] for ctt in ctriptuple])\n",
@@ -1202,12 +1272,9 @@
     "                assert(len(common_trip_ids)) == 1\n",
     "                common_trip_id = list(common_trip_ids)[0]\n",
     "                print(common_trip_id)\n",
-    "                comparison_map[phoneOS][common_name][common_trip_id] = {\n",
-    "                    \"accuracy_control\": ctriptuple[0]\n",
-    "                }\n",
-    "                for i, curr_role in enumerate(separate_roles):\n",
-    "                    comparison_map[phoneOS][common_name][common_trip_id][curr_role] = ctriptuple[i+1] # since power_accuracy is the first\n",
-    "                comparison_map[phoneOS][common_name][common_trip_id][\"power_control\"] = ctriptuple[-1]\n",
+    "                comparison_map[phoneOS][common_name][common_trip_id] = {}\n",
+    "                for cr, ctt in zip(separate_roles, ctriptuple):\n",
+    "                    comparison_map[phoneOS][common_name][common_trip_id][cr] = ctt\n",
     "    return comparison_map"
    ]
   },
