--- a/calibration_templates/Validate_calibration_stationary.ipynb
+++ b/calibration_templates/Validate_calibration_stationary.ipynb
@@ -34,9 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/input/spec_details.py\n",
     "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
-    "AUTHOR_EMAIL = \"CHANGEME\" # e.g. shankari@eecs.berkeley.edu\n",
-    "CURR_SPEC_ID = \"CHANGEME\" # e.g. sfba_calibration_only_1\n",
+    "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\" # e.g. shankari@eecs.berkeley.edu\n",
+    "CURR_SPEC_ID = \"sfba_calibration_only_1\" # e.g. sfba_calibration_only_1\n",
     "MAX_DURATION_VARIATION = 5 * 60 # seconds"
    ]
   },
@@ -105,6 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/viz/phone_view.py\n",
     "def get_row_count(n_maps, cols):\n",
     "    rows = int(n_maps / cols)\n",
     "    if (n_maps % cols != 0):\n",
@@ -125,6 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/input/spec_details.py\n",
     "def retrieve_data_from_server(user_label, key_list, start_ts, end_ts):\n",
     "    post_msg = {\n",
     "        \"user\": user_label,\n",
@@ -157,6 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/input/spec_details.py\n",
     "all_spec_entry_list = retrieve_all_data_from_server(AUTHOR_EMAIL, [\"config/evaluation_spec\"])\n",
     "curr_spec_entry = None\n",
     "for s in all_spec_entry_list:\n",
@@ -180,6 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/input/spec_details.py\n",
     "eval_start_ts = curr_spec_wrapper[\"start_ts\"]\n",
     "eval_end_ts = curr_spec_wrapper[\"end_ts\"]\n",
     "eval_tz = curr_spec[\"region\"][\"timezone\"]\n",
@@ -209,6 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/input/phone_view.py\n",
     "eval_transitions = copy.deepcopy(phone_labels)\n",
     "for phoneOS, phone_map in eval_transitions.items():\n",
     "    print(\"Reading data for %s phones\" % phoneOS)\n",
@@ -250,6 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/input/phone_view.py\n",
     "for phoneOS, phone_map in eval_transitions.items():\n",
     "    print(\"Processing data for %s phones\" % phoneOS)\n",
     "    for phone_label in phone_map:\n",
@@ -288,17 +295,22 @@
    "outputs": [],
    "source": [
     "# We expect that transitions occur in pairs\n",
-    "def transitions_to_ranges(transition_list, start_tt, end_tt, start_ti, end_ti):\n",
+    "# imported to emeval/input/phone_view.py\n",
+    "def transitions_to_ranges(transition_list, start_tt, end_tt, start_ti, end_ti, transition_entry_template, spec_end_ts):\n",
     "    start_transitions = transition_list[::2]\n",
     "    end_transitions = transition_list[1::2]\n",
     "    if len(transition_list) % 2 == 0:\n",
     "        print(\"All calibration is complete, nothing to change\")\n",
     "    else:\n",
     "        print(\"Ongoing calibration, adding fake end transition\")\n",
-    "        last_start_transition = phone_map[phone_label][\"transitions\"][-1]\n",
+    "        last_start_transition = transition_entry_template\n",
     "        fake_end_transition = copy.copy(last_start_transition)\n",
     "        fake_end_transition[\"data\"][\"transition\"] = end_tt\n",
     "        curr_ts = arrow.get().timestamp\n",
+    "        if curr_ts > spec_end_ts:\n",
+    "            fake_end_transition[\"data\"][\"ts\"] = spec_end_ts\n",
+    "        else:\n",
+    "            fake_end_transition[\"data\"][\"ts\"] = curr_ts\n",
     "        fake_end_transition[\"data\"][\"ts\"] = curr_ts\n",
     "        if \"fmt_time\" in last_start_transition[\"data\"]:\n",
     "            fake_end_transition[\"data\"][\"fmt_time\"] = arrow.get(curr_ts).to(eval_tz)\n",
@@ -330,7 +342,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transitions_to_ranges(eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_transitions\"], \"START_CALIBRATION_PERIOD\", \"STOP_CALIBRATION_PERIOD\", 0, 1)"
+    "transitions_to_ranges(eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_transitions\"],\n",
+    "                      \"START_CALIBRATION_PERIOD\", \"STOP_CALIBRATION_PERIOD\", 0, 1,\n",
+    "                    eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"transitions\"][-1], eval_end_ts)"
    ]
   },
   {
@@ -339,10 +353,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/input/phone_view.py\n",
     "for phoneOS, phone_map in eval_transitions.items():\n",
     "    print(\"Processing data for %s phones\" % phoneOS)\n",
     "    for phone_label in phone_map:\n",
-    "        curr_calibration_ranges = transitions_to_ranges(phone_map[phone_label][\"calibration_transitions\"], \"START_CALIBRATION_PERIOD\", \"STOP_CALIBRATION_PERIOD\", 0, 1)\n",
+    "        curr_calibration_ranges = transitions_to_ranges(phone_map[phone_label][\"calibration_transitions\"],\n",
+    "                                                        \"START_CALIBRATION_PERIOD\", \"STOP_CALIBRATION_PERIOD\", 0, 1,\n",
+    "                                                        phone_map[phone_label][\"transitions\"][-1], eval_end_ts)\n",
     "        print(\"Found %d ranges for phone %s\" % (len(curr_calibration_ranges), phone_label))\n",
     "        phone_map[phone_label][\"calibration_ranges\"] = curr_calibration_ranges"
    ]
@@ -364,9 +381,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expected_config_map = {}\n",
-    "for ct in curr_spec[\"calibration_tests\"]:\n",
-    "    expected_config_map[ct[\"id\"]] = ct[\"config\"][\"sensing_config\"]"
+    "# imported to emeval/validate/phone_view.py\n",
+    "def get_expected_config_map(curr_spec):\n",
+    "    expected_config_map = {}\n",
+    "    for ct in curr_spec[\"calibration_tests\"]:\n",
+    "        expected_config_map[ct[\"id\"]] = ct[\"config\"][\"sensing_config\"]\n",
+    "    return expected_config_map"
    ]
   },
   {
@@ -375,6 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/validate/phone_view.py\n",
     "# Current accuracy constants\n",
     "# Since we can't read these from the phone, we hardcoded them from the documentation\n",
     "# If there are validation failures, these need to be updated\n",
@@ -407,9 +428,10 @@
    },
    "outputs": [],
    "source": [
+    "# imported to emeval/validate/phone_view.py\n",
     "opt_array_idx = lambda phoneOS: 0 if phoneOS == \"android\" else 1\n",
     "\n",
-    "def validate_filter(phoneOS, config_during_test, expected_config):\n",
+    "def _validate_filter(phoneOS, config_during_test, expected_config):\n",
     "    # filter checking is a bit tricky because the expected value has two possible values and the real config has two possible values\n",
     "    expected_filter = expected_config[\"filter\"]\n",
     "    if type(expected_filter) == int:\n",
@@ -425,12 +447,13 @@
     "        \n",
     "    assert config_during_test[cvf] == ev, \"Field filter mismatch! %s != %s\" % (config_during_test, expected_config)\n",
     "    \n",
-    "def validate_accuracy(phoneOS, config_during_test, expected_config):\n",
+    "def _validate_accuracy(phoneOS, config_during_test, expected_config):\n",
     "    # expected config accuracy is an array of strings [\"PRIORITY_BALANCED_POWER_ACCURACY\", \"kCLLocationAccuracyNearestTenMeters\"]\n",
     "    # so we find the string at the correct index and then map it to the value from the options\n",
     "    ev = accuracy_options[phoneOS][expected_config[\"accuracy\"][opt_array_idx(phoneOS)]]\n",
     "    assert config_during_test[\"accuracy\"] == ev, \"Field accuracy mismatch! %s != %s\" % (config_during_test[accuracy], ev)\n",
     "\n",
+    "expected_config_map = get_expected_config_map(curr_spec)\n",
     "for phoneOS, phone_map in eval_transitions.items():\n",
     "    print(\"Processing data for %s phones\" % phoneOS)\n",
     "    for phone_label in phone_map:\n",
@@ -446,8 +469,8 @@
     "            config_during_test = config_during_test_entries[0][\"data\"]\n",
     "            expected_config = expected_config_map[r[\"trip_id\"]]\n",
     "            # print(config_during_test, expected_config)\n",
-    "            validate_filter(phoneOS, config_during_test, expected_config)\n",
-    "            validate_accuracy(phoneOS, config_during_test, expected_config)\n",
+    "            _validate_filter(phoneOS, config_during_test, expected_config)\n",
+    "            _validate_accuracy(phoneOS, config_during_test, expected_config)\n",
     "            for f in expected_config:\n",
     "                if f != \"accuracy\" and f != \"filter\":\n",
     "                    assert config_during_test[f] == expected_config[f], \"Field %s mismatch! %s != %s\" % (f, config_during_test[f], expected_config[f])"
@@ -489,6 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/validate/phone_view.py\n",
     "duration_map = {}\n",
     "for phoneOS, phone_map in eval_transitions.items():\n",
     "    print(\"Processing data for %s phones\" % phoneOS)\n",
@@ -516,6 +540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/validate/phone_view.py\n",
     "for col in duration_df:\n",
     "    duration_variation = duration_df[col] - duration_df[col].median()\n",
     "    print(\"For %s, duration_variation = %s\" % (col, duration_variation.tolist()))\n",
@@ -568,6 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/input/phone_view.py\n",
     "for phoneOS, phone_map in eval_transitions.items():\n",
     "    print(\"Processing data for %s phones\" % phoneOS)\n",
     "    for phone_label in phone_map:\n",
@@ -610,10 +636,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_calibration_curves(ax, phone_map):\n",
+    "# imported to emeval/viz/phone_view.py\n",
+    "def plot_all_power_drain_for_phone_view(ax, phone_map, range_key, trip_id_pattern):\n",
     "    for phone_label in phone_map:\n",
-    "        curr_calibration_ranges = phone_map[phone_label][\"calibration_ranges\"]\n",
-    "        for r in curr_calibration_ranges:\n",
+    "        curr_calibration_ranges = phone_map[phone_label][\"{}_ranges\".format(range_key)]\n",
+    "        sel_calibration_ranges = [cr for cr in curr_calibration_ranges if trip_id_pattern in cr[\"trip_id\"]]\n",
+    "        for r in sel_calibration_ranges:\n",
     "            battery_df = r[\"battery_df\"]\n",
     "            ret_axes = battery_df.plot(x=\"hr\", y=\"battery_level_pct\", ax=ax, label=phone_label+\"_\"+r[\"trip_id\"], ylim=(0,100), sharey=True)"
    ]
@@ -628,9 +656,9 @@
    "source": [
     "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(25,25))\n",
     "\n",
-    "plot_calibration_curves(ios_ax, eval_transitions[\"ios\"])\n",
+    "plot_all_power_drain_for_phone_view(ios_ax, eval_transitions[\"ios\"], \"calibration\", \"\")\n",
     "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n",
-    "plot_calibration_curves(android_ax, eval_transitions[\"android\"])\n",
+    "plot_all_power_drain_for_phone_view(android_ax, eval_transitions[\"android\"], \"calibration\", \"\")\n",
     "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
    ]
   },
@@ -640,7 +668,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_separate_calibration_curves(fig, nRows, phone_map):\n",
+    "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(25,25))\n",
+    "\n",
+    "plot_all_power_drain_for_phone_view(ios_ax, eval_transitions[\"ios\"], \"calibration\", \"high_accuracy\")\n",
+    "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n",
+    "plot_all_power_drain_for_phone_view(android_ax, eval_transitions[\"android\"], \"calibration\", \"high_accuracy\")\n",
+    "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imported to emeval/viz/phone_view.py\n",
+    "def plot_separate_power_drain_for_OS(fig, nRows, phone_map):\n",
     "    for i, phone_label in enumerate(phone_map.keys()):\n",
     "        ax = fig.add_subplot(nRows, 2, i+1, title=phone_label)\n",
     "        curr_calibration_ranges = phone_map[phone_label][\"calibration_ranges\"]\n",
@@ -659,7 +702,7 @@
     "(ifig, ax) = plt.subplots(figsize=(16,16))\n",
     "nRows = get_row_count(len(eval_transitions[\"ios\"].keys()), 2)\n",
     "print(nRows)\n",
-    "plot_separate_calibration_curves(ifig, nRows, eval_transitions[\"ios\"])"
+    "plot_separate_power_drain_for_OS(ifig, nRows, eval_transitions[\"ios\"])"
    ]
   },
   {
@@ -670,7 +713,7 @@
    "source": [
     "(ifig, ax) = plt.subplots(nrows=0, ncols=0, figsize=(16,16))\n",
     "nRows = get_row_count(len(eval_transitions[\"android\"].keys()), 2)\n",
-    "plot_separate_calibration_curves(ifig, nRows, eval_transitions[\"android\"])"
+    "plot_separate_power_drain_for_OS(ifig, nRows, eval_transitions[\"android\"])"
    ]
   },
   {
@@ -693,6 +736,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # imported to emeval/input/phone_view.py\n",
     "for phoneOS, phone_map in eval_transitions.items():\n",
     "    print(\"Processing data for %s phones\" % phoneOS)\n",
     "    for phone_label in phone_map:\n",
@@ -724,6 +768,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/viz/phone_view.py\n",
     "count_map = {}\n",
     "for phoneOS, phone_map in eval_transitions.items():\n",
     "    print(\"Processing data for %s phones\" % phoneOS)\n",
@@ -753,6 +798,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imported to emeval/viz/phone_view.py\n",
     "def get_location_density_df(phone_map):\n",
     "    density_map = {}\n",
     "    for phone_label in phone_map:\n",
@@ -783,6 +829,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # imported to emeval/viz/phone_view.py\n",
     "def plot_separate_density_curves(fig, nRows, phone_map):\n",
     "    for i, phone_label in enumerate(phone_map.keys()):\n",
     "        ax = fig.add_subplot(nRows, 2, i+1, title=phone_label)\n",
@@ -899,7 +946,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_map_list_for_trip():\n",
+    "# # imported to emeval/viz/phone_view.py\n",
+    "def get_map_list_for_phone_view():\n",
     "    map_list = []\n",
     "    for phoneOS, phone_map in eval_transitions.items():\n",
     "        print(\"Processing data for %s phones\" % phoneOS)\n",
@@ -937,7 +985,7 @@
    },
    "outputs": [],
    "source": [
-    "ha_map_list = get_map_list_for_trip()"
+    "ha_map_list = get_map_list_for_phone_view()"
    ]
   },
   {
@@ -1007,13 +1055,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_comparison_regimes():\n",
+    "# # imported to emeval/input/eval_view.py\n",
+    "def fill_from_calibration_multiple_runs(match_trip_id_pattern):\n",
     "    comparison_map = {}\n",
     "    for phoneOS, phone_map in eval_transitions.items(): # android, ios\n",
     "        print(\"Processing data for %s phones\" % phoneOS)\n",
     "        comparison_map[phoneOS] = {}\n",
     "        for phone_label, phone_data_map in phone_map.items(): # ucb-sdb-android-1\n",
     "            for r in phone_data_map[\"calibration_ranges\"]:\n",
+    "                if match_trip_id_pattern not in r[\"trip_id\"]:\n",
+    "                    print(\"trip %s does not match pattern %s, skipping\" %\n",
+    "                          (r[\"trip_id\"], match_trip_id_pattern))\n",
+    "                    continue\n",
     "                trip_type = \"_\".join(r[\"trip_id\"].split(\"_\")[:-1])\n",
     "                # print(trip_type)\n",
     "                if trip_type not in comparison_map[phoneOS]:\n",
@@ -1030,7 +1083,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "comparison_map = find_comparison_regimes()"
+    "comparison_map = fill_from_calibration_multiple_runs()"
    ]
   },
   {
@@ -1046,11 +1099,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_per_trip_evaluation_curves(fig, nRows, phone_map):\n",
-    "    i = 0\n",
-    "    for curr_calibrate, curr_calibrate_trip_map in phone_map.items(): # high_accuracy_train_AO\n",
+    "# # imported to emeval/input/eval_view.py\n",
+    "def plot_all_power_drain_multiple_runs_for_eval_map(fig, nRows, eval_map, trip_id_pattern):\n",
+    "    for i, (curr_calibrate, curr_calibrate_trip_map) in enumerate(eval_map.items()): # high_accuracy_train_AO\n",
+    "        if trip_id_pattern not in curr_calibrate:\n",
+    "            print(\"curr_calibrate = %s, not matching pattern %s, skipping\" % (curr_calibrate, trip_id_pattern))\n",
+    "            continue\n",
     "        ax = fig.add_subplot(nRows, 2, i+1, title=curr_calibrate)\n",
-    "        i = i+1\n",
     "        for curr_cal_run, cal_phone_map in curr_calibrate_trip_map.items():\n",
     "            for phone_label, phone_data_map in cal_phone_map.items():\n",
     "                # print(\"Extracting data for %s from map with keys %s\" % (phone_label, phone_data_map.keys()))\n",
@@ -1072,7 +1127,7 @@
     "print(exp_plot_counts)\n",
     "nRows = get_row_count(exp_plot_counts, 2)\n",
     "print(nRows)\n",
-    "plot_per_trip_evaluation_curves(ifig, nRows, comparison_map[\"android\"])"
+    "plot_all_power_drain_multiple_runs_for_eval_map(ifig, nRows, comparison_map[\"android\"], \"\")"
    ]
   },
   {
@@ -1086,7 +1141,21 @@
     "print(exp_plot_counts)\n",
     "nRows = get_row_count(exp_plot_counts, 2)\n",
     "print(nRows)\n",
-    "plot_per_trip_evaluation_curves(ifig, nRows, comparison_map[\"ios\"])"
+    "plot_all_power_drain_multiple_runs_for_eval_map(ifig, nRows, comparison_map[\"ios\"], \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(ifig, ax) = plt.subplots(figsize=(16,16),nrows=0,ncols=0)\n",
+    "exp_plot_counts = len(comparison_map[\"ios\"])\n",
+    "print(exp_plot_counts)\n",
+    "nRows = get_row_count(exp_plot_counts, 2)\n",
+    "print(nRows)\n",
+    "plot_all_power_drain_multiple_runs_for_eval_map(ifig, nRows, comparison_map[\"ios\"], \"high_accuracy\")"
    ]
   },
   {
