--- a/pilot_trips/many_unimodal_trips_southbay.ipynb
+++ b/pilot_trips/many_unimodal_trips_southbay.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook demonstrates the result of the first round of data collection, for the Mountain View library <-> Los Altos library round trip."
+    "This notebook demonstrates vizualizes the data collection for a multi-modal pilot trip from Mountain View to Los Altos. It is not a full timeline. Its limitations are:\n",
+    "- the version of the spec that it uses is obsolete\n",
+    "- the ground truth is incorrect, although in some small parts\n",
+    "- it is a set of unimodal trips instead of combined multi-modal trips\n",
+    "\n",
+    "But its big strength is that it includes a HAHFDC v/s HFMFDC comparison for iOS. After we saw the results here, we moved to HAHFDC v/s MAHFDC so at this point we don't have any such other results."
    ]
   },
   {
@@ -12,6 +17,16 @@
    "metadata": {},
    "source": [
     "## Import all the dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")"
    ]
   },
   {
@@ -87,7 +102,7 @@
    "source": [
     "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sdunp = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"unimodal_trip_car_bike_mtv_la\")"
+    "sdunp = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"many_unimodal_trips_sb\")"
    ]
   },
   {
@@ -115,7 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pvunp.validate()"
+    "# Commenting out validation since this is an obsolete spec format\n",
+    "# pvunp.validate()"
    ]
   },
   {
@@ -167,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_list = ezev.get_map_list_eval_trips(evunp, \"ios\", \"\", \"HAHFDC|MAHFDC\")\n",
+    "map_list = ezev.get_map_list_eval_trips(evunp, \"ios\", \"\", \"HAHFDC|HAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
@@ -186,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
@@ -197,32 +211,6 @@
     "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=1)\n",
     "ezpv.plot_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\")\n",
     "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    def get_ground_truth_trajectory_for_leg(leg_id):\n",
-    "        for t in sdunp.curr_spec_entry[\"data\"][\"label\"][\"evaluation_trips\"]:\n",
-    "            print(\"Considering trip %s\" % t[\"id\"])\n",
-    "            ll = [l for l in t[\"legs\"] if l[\"id\"] == leg_id]\n",
-    "            if len(ll) > 0:\n",
-    "                assert len(ll) == 1\n",
-    "                return ll[0]\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Spec with list of legs is defined at https://github.com/e-mission/e-mission-eval-public-data/tree/master/spec_creation/final_sfbayarea\n",
-    "get_ground_truth_trajectory_for_leg(\"suburb_bicycling\")"
    ]
   },
   {
