Add automatic detection and filtering of time outliers
From the location density map
I thought I had already handled this but apparently not

I also want to provide a template for displaying the map where the anomaly
occurred but am going to check in what I have for now

--- a/example_visualization_ucb_multimodal_10_sections.ipynb
+++ b/example_visualization_ucb_multimodal_10_sections.ipynb
@@ -143,6 +143,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "importlib.reload(ezev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "map_list = ezev.get_map_list_eval_trips(evunp, \"android\", \"\", \"HAHFDC|HAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
@@ -205,6 +216,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "importlib.reload(ezpv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "android_density_df = ezpv.get_location_density_df(pvunp.map()[\"android\"], \"evaluation\")\n",
     "nRows = ezpv.get_row_count(len(android_density_df), 2)\n",
     "print(nRows)\n",
@@ -218,10 +238,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "invalid_point_mask = np.full(len(android_density_df), False)\n",
     "for col in android_density_df:\n",
-    "    before_points = android_density_df[col] < 0\n",
-    "    if len(before_points) > 0:\n",
-    "        print(col, android_density_df[col][before_points])"
+    "    before_points = android_density_df[col] < 0 # 6 minutes\n",
+    "    if np.count_nonzero(np.array(before_points)) > 0:\n",
+    "        print(col, android_density_df[col][before_points])\n",
+    "        invalid_point_mask = invalid_point_mask | before_points\n",
+    "        \n",
+    "print(np.nonzero(np.array(invalid_point_mask)))"
    ]
   },
   {
@@ -230,19 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "android_density_df[android_density_df[\"ucb-sdb-android-1_fixed:ACCURACY_CONTROL_1\"] < 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Enable only if the previous step has any weird negative points, and modify the column\n",
-    "col_with_weird_negative_points = \"ucb-sdb-android-2_HAHFDC v/s HAMFDC:HAHFDC_0\"\n",
-    "curr_col = android_density_df[col_with_weird_negative_points]\n",
-    "filtered_android_density_df = android_density_df[curr_col > 0].drop(\"ucb-sdb-android-4_fixed:POWER_CONTROL_0\", axis=1)\n",
+    "filtered_android_density_df = android_density_df[np.logical_not(invalid_point_mask)]\n",
     "android_ax = filtered_android_density_df.plot(kind='density', subplots=False, layout=(nRows, 2), figsize=(8,8), sharex=True, sharey=True)\n",
     "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
    ]
