Fix the comments on the pilot trips which had gotten swapped

--- a/pilot_trips/multimodal_trip_mtv_ucb.ipynb
+++ b/pilot_trips/multimodal_trip_mtv_ucb.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook demonstrates vizualizes the data collection for a multi-modal pilot trip from Mountain View to Los Altos. It is not a full timeline. Its limitations are:\n",
+    "This notebook demonstrates vizualizes the data collection for a multi-modal pilot trip from Mountain View to Berkeley. It is not a full timeline. Its limitations are:\n",
     "- the version of the spec that it uses is obsolete\n",
-    "- the ground truth is incorrect, although in some small parts\n",
+    "- the ground truth is incorrect, in particular, the BART transition point is clearly incorrect. Also, the ground truth for the 52 bus to Soda leg is incorrect, since I ended up walking that leg\n",
     "- it is a set of unimodal trips instead of combined multi-modal trips\n",
     "- it is missing battery information for some phones, including the important HAMFDC iOS. So at this point, I think I should just delete this.\n",
     "\n",
