Also fix the comments for SB trip to identify what the errors are

--- a/pilot_trips/many_unimodal_trips_southbay.ipynb
+++ b/pilot_trips/many_unimodal_trips_southbay.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "This notebook demonstrates vizualizes the data collection for a multi-modal pilot trip from Mountain View to Los Altos. It is not a full timeline. Its limitations are:\n",
     "- the version of the spec that it uses is obsolete\n",
-    "- the ground truth is incorrect, in particular, due to Thursday Night Live, I had to bike to t\n",
+    "- the ground truth is incorrect, in particular, due to Thursday Night Live, I had to bike to the bus stop in Mountain View, and I followed the wrong trajectory on part of the trip\n",
     "- it is a set of unimodal trips instead of combined multi-modal trips\n",
     "\n",
     "But its big strength is that it includes a HAHFDC v/s HFMFDC comparison for iOS. After we saw the results here, we moved to HAHFDC v/s MAHFDC so at this point we don't have any such other results."
